* The storing mechanism of pixel shaders was redesigned:
    - each pixel shader is now stored in its own file with .hlsl extension
    - shader files are reloaded automatically when MPC-HC detects changes in them
    - internal pixel shader editor was removed, you're supposed to use specialized external
      editors from now on, but can still view compilation output in "Debug Shaders" window
    - internal video renderers now always use the latest supported shader profile to compile
      pixel shaders
* More flexible auto-hide controls in fullscreen configuration options
* Updated LAV Filters to 0.59.1.107:
    - Ticket #3540, LAV Splitter: The current/average bitrate is now shown in the Information panel
    - Ticket #3760, LAV Video: Fix a crash when opening some DVDs on 64-bit
    - Ticket #3793, LAV Video: Fix a decoding issue with some H264 files
    - Ticket #3849, LAV Video: DXVA VC1/WMV3 decoding now works on Intel cards
    - Ticket #3862, LAV Splitter: Fix a crash when opening MKV files with big attachments
* Updated Basque, Czech, Simplified and Traditional Chinese, French, German, Greek, Japanese,
  Polish, Slovak, Slovenian and Turkish translations
* Updated MediaInfoLib to v0.7.65
* Updated ZenLib to v0.4.29 r453
* Updated Little CMS to v2.6b (git 579b3aa)
* Updated Unrar to v5.0.0.14
! Internal subtiles renderer: Vobsub/PGS/DVB subtitles are now rendered relative to the video frame
! Warnings were not displayed in pixel shader compilation output
! Ticket #720/#1807/#2625/#3161 Improve stability in analog capture mode when using EVR-CP/Sync renderer
! Ticket #1300/#2081, Toolbars auto-hiding now always works properly in multi-display configurations
! Ticket #3479, Improve the behavior of MPC-HC when some security tools prevent it
  from initializing correctly
! Ticket #3650, Improve the speed of subtitles toggling (on/off) and switching
! Ticket #3668, MPC-HC could crash when reloading the subtitles