@@ -42,6 +42,7 @@ next version - not released yet
 * Updated Unrar to v5.0.0.14
 ! Internal subtiles renderer: Vobsub/PGS/DVB subtitles are now rendered relative to the video frame
 ! Warnings were not displayed in pixel shader compilation output
+! DVB: It was sometimes impossible to restart playback after it was stopped
 ! Ticket #720/#1807/#2625/#3161 Improve stability in analog capture mode when using EVR-CP/Sync renderer
 ! Ticket #1300/#2081, Toolbars auto-hiding now always works properly in multi-display configurations
 ! Ticket #3479, Improve the behavior of MPC-HC when some security tools prevent it
